tests/base/invalid/Return_CompileFail_4.whiley


int f(bool y):
    return y
